--- a/index.html
+++ b/index.html
@@ -8,8 +8,34 @@
   </head>
   <body>
     <div class="container">
-      <section></section>
-      <section></section>
+      <section><img src="" alt="" /></section>
+      <section>
+        <form action="#" method="post">
+          <h2>SIGN UP</h2>
+          <label for="first-name">First Name</label>
+          <input type="text" id="first-name" name="first-name" />
+          <label for="middle-name">Middle Name</label>
+          <input type="text" name="middle-name" id="middle-name" />
+          <label for="last-name">Last name</label>
+          <input type="text" name="last-name" id="last-name" />
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" />
+          <label for="password">Password</label>
+          <input type="password" name="password" id="password" />
+          <label for="confirm-password"> Confirm Password</label>
+          <input
+            type="password"
+            name="confirm-password"
+            id="confirm-password"
+          />
+          <label for="remember"
+            ><input type="checkbox" id="remember" name="remember" />Remember
+            me!</label
+          >
+          <button>submit</button>
+          <button type="button">Already have an account</button>
+        </form>
+      </section>
     </div>
   </body>
 </html>
