--- a/index.html
+++ b/index.html
@@ -12,28 +12,58 @@
       <section>
         <form action="#" method="post">
           <h2>SIGN UP</h2>
-          <label for="first-name">First Name</label>
-          <input type="text" id="first-name" name="first-name" />
-          <label for="middle-name">Middle Name</label>
-          <input type="text" name="middle-name" id="middle-name" />
-          <label for="last-name">Last name</label>
-          <input type="text" name="last-name" id="last-name" />
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" />
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" />
-          <label for="confirm-password"> Confirm Password</label>
-          <input
-            type="password"
-            name="confirm-password"
-            id="confirm-password"
-          />
-          <label for="remember"
-            ><input type="checkbox" id="remember" name="remember" />Remember
-            me!</label
-          >
-          <button>submit</button>
-          <button type="button">Already have an account</button>
+
+          <div class="inputs-container">
+            <div class="left-form">
+              <div class="input">
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name" name="first-name" />
+              </div>
+              <div class="input">
+                <label for="middle-name">Middle Name</label>
+                <input type="text" name="middle-name" id="middle-name" />
+              </div>
+              <div class="input">
+                <label for="last-name">Last name</label>
+                <input type="text" name="last-name" id="last-name" />
+              </div>
+            </div>
+            <div class="right-form">
+              <div class="input">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" />
+              </div>
+              <div class="input">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" />
+              </div>
+              <div class="input">
+                <label for="confirm-password"> Confirm Password</label>
+                <input
+                  type="password"
+                  name="confirm-password"
+                  id="confirm-password"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="submit-area">
+            <div class="remember">
+              <label for="remember"
+                ><input type="checkbox" id="remember" name="remember" />Remember
+                me!</label
+              >
+            </div>
+            <button>submit</button>
+            <button type="button">Already have an account</button>
+          </div>
+          <div class="sign-in-label">Sign in with</div>
+          <div class="sign-in-option">
+            <button>Google</button>
+            <button>Github</button>
+            <button>Facebook</button>
+            <button>Leetcode</button>
+          </div>
         </form>
       </section>
     </div>
