--- a/index.html
+++ b/index.html
@@ -16,33 +16,51 @@
           <div class="inputs-container">
             <div class="left-form">
               <div class="input">
-                <label for="first-name">First Name</label>
-                <input type="text" id="first-name" name="first-name" />
+                <label for="first-name"
+                  >First Name <span aria-label="required">*</span></label
+                >
+                <input type="text" id="first-name" name="first-name" required />
               </div>
               <div class="input">
-                <label for="middle-name">Middle Name</label>
-                <input type="text" name="middle-name" id="middle-name" />
+                <label for="middle-name"
+                  >Middle Name <span aria-label="required">*</span></label
+                >
+                <input
+                  type="text"
+                  name="middle-name"
+                  id="middle-name"
+                  required
+                />
               </div>
               <div class="input">
-                <label for="last-name">Last name</label>
-                <input type="text" name="last-name" id="last-name" />
+                <label for="last-name"
+                  >Last name <span aria-label="required">*</span></label
+                >
+                <input type="text" name="last-name" id="last-name" required />
               </div>
             </div>
             <div class="right-form">
               <div class="input">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" />
+                <label for="email"
+                  >Email <span aria-label="required">*</span></label
+                >
+                <input type="email" id="email" name="email" required />
               </div>
               <div class="input">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" />
+                <label for="password"
+                  >Password <span aria-label="required">*</span></label
+                >
+                <input type="password" name="password" id="password" required />
               </div>
               <div class="input">
-                <label for="confirm-password"> Confirm Password</label>
+                <label for="confirm-password">
+                  Confirm Password <span aria-label="required">*</span></label
+                >
                 <input
                   type="password"
                   name="confirm-password"
                   id="confirm-password"
+                  required
                 />
               </div>
             </div>
