Implement the other left section of the page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <section><img src="" alt="" /></section>
+      <section>
+        <h1>codePhoenix Site</h1>
+        <p>
+          Join the family and lets make your journey here a great
+          <strong>ONE!</strong>
+        </p>
+      </section>
       <section>
         <form action="#" method="post">
           <h2>SIGN UP</h2>
