Change button type to button

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           </div>
           <div class="sign-in-label">Sign in with</div>
           <div class="sign-in-option">
-            <button>Google</button>
-            <button>Github</button>
-            <button>Facebook</button>
-            <button>Leetcode</button>
+            <button type="button">Google</button>
+            <button type="button">Github</button>
+            <button type="button">Facebook</button>
+            <button type="button">Leetcode</button>
           </div>
         </form>
       </section>
