Add font and position copyright

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           Join the family and lets make your journey here a great
           <strong>ONE!</strong>
         </p>
+        <div class="copy">&copy;luciphoenix</div>
       </section>
       <section>
         <form action="#" method="post">
